# portbay

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .repo-boundary-allow  .repo-boundary-denylist  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  node_modules  package.json  pb-bundle.mjs  playwright.config.ts  playwright.screenshots.config.ts  pnpm-lock.yaml  vite.config.js  vitest.config.ts  wrangler.docs.jsonc  wrangler.jsonc
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
docs/: ARCHITECTURE.md  HOSTS_HELPER.md  OBSIDIAN_BOARD.md  PERFORMANCE.md  RELEASING.md  SIZE-MEMORY-BUDGETS.md  SSL_PARITY_REPORT.md  UX_DESIGN.md  community-welcome.md  funding-case.md  linux-support-memo.md  release.md
docs-site/: contributing.md  index.md  tsconfig.json
scripts/: apply-repo-protection.sh  build-afm.sh  build-hosts-helper.sh  build-imagegen.sh  build-mcp.sh  build-stt.sh  check-linux-packaging.sh  check-repo-boundaries.sh  fetch-caddy.sh  fetch-cloudflared.sh  fetch-dnsmasq.sh  fetch-mailpit.sh  fetch-mkcert.sh  fetch-process-compose.sh  generate-completions.sh  generate-dmg-background.py  generate-icons.py  generate-og-image.py  generate-tray-icons.sh  inject-macos-liquid-glass-icon.sh  macos-dev-sign-run.sh  prepare-macos-liquid-glass-icon.sh  release-appimage-local.sh  release-dmg-local.sh  release-linux-local.sh  screenshots.ts  setup-hooks.sh  stamp-og-meta.mjs  verify-macos-signing.sh
snap/: snapcraft.yaml
src/: app.css  app.d.ts  app.html  hooks.client.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/.cargo/: config.toml
src-tauri/afm/: main.swift
src-tauri/binaries/: dnsmasq-aarch64-apple-darwin  portbay-afm-aarch64-apple-darwin  portbay-imagegen-aarch64-apple-darwin  portbay-stt-aarch64-apple-darwin
src-tauri/capabilities/: default.json  dictation-overlay.json  tray-panel.json
src-tauri/crates/hosts-helper/: Cargo.toml
src-tauri/crates/hosts-helper/src/: main.rs
src-tauri/crates/mcp/: Cargo.toml
src-tauri/crates/mcp/src/: main.rs
src-tauri/icons/: README.md  dmg-background.tiff  icon.icns
src-tauri/icons/linux-freedesktop/: README.md
src-tauri/icons/macos-liquid-glass/: README.md
src-tauri/icons/macos-liquid-glass/PortBay.icon/: icon.json
src-tauri/icons/macos-liquid-glass/compiled/: Assets.car  README.md
src-tauri/icons/windows-fluent/: README.md
src-tauri/imagegen/: Package.resolved  Package.swift
src-tauri/imagegen/Sources/portbay-imagegen/: main.swift
src-tauri/macos/: com.portbay-app.portbay.hosts-helper.plist
src-tauri/resources/: default-model-catalog.json
src-tauri/src/: adb_pair.rs  avatar.rs  cli_install.rs  db_approval.rs  db_client.rs  dictation.rs  dictation_anywhere.rs  dictation_commands.rs  dictation_context.rs  dictation_entities.rs  dictation_history.rs  dictation_session.rs  dictation_vocab.rs  dock_icon.rs  doctor.rs  domain.rs  error.rs  favicon.rs  flags.rs  hosts.rs  hosts_helper.rs  imagegen.rs  imageplayground.rs  install_proxy.rs  lib.rs  main.rs  mkcert.rs  mobile.rs  mobile_phase.rs  mobile_targets.rs  notifications.rs  ollama.rs  overlay_window.rs  port_holder.rs  preferences.rs  project_icon.rs  project_runtime.rs  run_stream.rs  sandbox.rs  sidecar_probe.rs  (+10 more)
src-tauri/src/agents/: mod.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/caddy/: client.rs  config.rs  error.rs  lifecycle.rs  mod.rs  types.rs
src-tauri/src/commands/: artifacts.rs  auth.rs  certs.rs  cli.rs  databases.rs  dbconn.rs  deploy.rs  dictation.rs  dictation_anywhere.rs  dnsmasq.rs  dto.rs  entitlements.rs  events.rs  groups.rs  http_inspector.rs  hwfit.rs  imagegen.rs  imageplayground.rs  import.rs  integrations.rs  lifecycle.rs  localfs.rs  log_stream.rs  metrics.rs  mobile.rs  mod.rs  model_catalog.rs  notifications.rs  ollama.rs  ollama_library.rs  onboarding.rs  php.rs  portfile.rs  preferences.rs  profile.rs  projects.rs  runtimes.rs  sftp.rs  sidecars.rs  ssh_agent.rs  (+13 more)
src-tauri/src/databases/: backup.rs  env_profile.rs  mod.rs
src-tauri/src/dnsmasq/: config.rs  error.rs  lifecycle.rs  mod.rs  resolver.rs
src-tauri/src/entitlements/: mod.rs
src-tauri/src/import/: error.rs  herd.rs  mamp.rs  mod.rs  servbay.rs
src-tauri/src/mailpit/: error.rs  lifecycle.rs  mod.rs
src-tauri/src/mcp/: mod.rs  ops.rs  recipes.rs  server.rs  types.rs
src-tauri/src/php/: error.rs  lifecycle.rs  mod.rs
src-tauri/src/portfile/: error.rs  mod.rs  schema.rs
src-tauri/src/process_compose/: client.rs  config.rs  error.rs  lifecycle.rs  mod.rs  types.rs
src-tauri/src/reconciler/: caddy.rs  certs.rs  hosts.rs  mod.rs  pc.rs  report.rs
src-tauri/src/registry/: error.rs  mod.rs  store.rs  types.rs  workspace.rs
src-tauri/src/runtimes/: bun.rs  env.rs  flutter.rs  go.rs  mod.rs  node.rs  php.rs  python.rs  ruby.rs
src-tauri/src/runtimes/download/: install.rs  manifest.rs  mod.rs
src-tauri/src/runtimes/download/fixtures/: manifest.json  manifest.json.sig  test-pubkey.b64
src-tauri/src/smoke_site/: index.html
src-tauri/src/ssh/: agent.rs  backend.rs  config_import.rs  exec.rs  exec_manager.rs  interaction.rs  known_hosts.rs  manager.rs  mod.rs  probe.rs  proxy.rs  pty.rs  secret.rs  session.rs  sftp.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/tunnel/: error.rs  lifecycle.rs  mod.rs  named.rs
src-tauri/stt/: Package.resolved  Package.swift
src-tauri/stt/Sources/portbay-stt/: main.swift
src-tauri/swift/: PortBayImagePlayground.swift
src-tauri/tests/: sftp_integration.rs  sidecar_reclaim_integration.rs  ssh_auth_integration.rs  ssh_exec_integration.rs  ssh_jump_integration.rs  ssh_password_auth_integration.rs  ssh_probe_integration.rs  ssh_reconnect_integration.rs
static/: robots.txt
tests/: autocomplete.test.ts  deployLive.test.ts  dictationEngine.test.ts  dictationSplice.test.ts  dictationVocabulary.test.ts  entrySort.test.ts  fuzzy.test.ts  hostProblems.test.ts  hostSnapshot.test.ts  hwfit.test.ts  (+15 more)
(+640 files in other folders)
