[package]
name = "portbay"
version = "0.1.1"
description = "PortBay — lightweight local development environment manager"
authors = ["Tribal House"]
license = "Apache-2.0"
edition = "2021"
default-run = "portbay-app"

[lib]
name = "portbay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Two bins: the Tauri GUI (loaded into PortBay.app) and the CLI shipped
# alongside. mainBinaryName in tauri.conf.json points at portbay-app.
[[bin]]
name = "portbay-app"
path = "src/main.rs"

[[bin]]
name = "portbay"
path = "src/bin/portbay.rs"

# Companion binaries (portbay-mcp, portbay-hosts-helper) are NOT bins of this
# package — they live in their own workspace crates under crates/ and ship as
# Tauri sidecars (see [workspace] below and scripts/build-*.sh). Keeping them
# out of this package means the Tauri bundler only auto-includes the GUI bin,
# and the rmcp/schemars stack is compiled only when crates/mcp is built.
[workspace]
members = ["crates/mcp", "crates/hosts-helper"]

[features]
# Enables `portbay_lib::mcp` + its protocol stack (rmcp). Off by default for
# GUI/CLI builds; turned on by the crates/mcp dependency on this package.
mcp = ["dep:rmcp"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Auto-update: checks the GitHub-hosted latest.json, verifies the minisign
# signature against the pubkey in tauri.conf.json, downloads + installs.
# tauri-plugin-process backs the relaunch-after-install call.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "signal", "process"] }
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1"
dirs = "5"
thiserror = "2"
url = "2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
which = "6"
window-vibrancy = { version = "0.5", optional = false }
console = "0.16"
sysinfo = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x509-parser = "0.18"
libc = "0.2"
ed25519-dalek = "2"
base64 = "0.22"
# Verify the signed managed-runtime manifest with the *same* minisign key as the
# app updater. Already in the tree transitively via tauri-plugin-updater; pinned
# here so the on-demand runtime download path is as trusted as an app update.
minisign-verify = "0.2"
# On-demand managed-runtime download + extract: verify SHA-256 (sha2/hex), then
# decompress the .tar.zst archive (zstd + tar) into place. tar/sha2/hex are
# already in the tree transitively; zstd is the chosen runtime-archive codec.
zstd = "0.13"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"
keyring = { version = "3", features = ["apple-native"] }
aes-gcm = "0.10"

# Official Rust MCP SDK. Optional — gated behind the `mcp` feature and only
# compiled when the crates/mcp workspace member (which enables that feature)
# is built, never for the GUI/CLI. `schemars` is enabled so we can derive the
# JSON Schema agents read; rmcp re-exports it (`rmcp::schemars`) so the
# version always matches the SDK's expectation. stdio transport only —
# no HTTP/axum surface.
rmcp = { version = "1.7", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
], optional = true }

[dev-dependencies]
tempfile = "3"

# Release-build hygiene. `strip` drops debug symbols from the GUI binary
# (~9 MB off an unstripped ~21 MB), `lto` + a single codegen unit shrink and
# optimise across crates. opt-level is left at the default (3) so runtime
# speed — a product positioning point — isn't traded away for size.
# Applies workspace-wide (this is the workspace root); see scripts/build-*.sh
# for the sidecar crates.
[profile.release]
strip = true
lto = true
codegen-units = 1
