[package]
name = "portbay"
version = "0.1.4"
description = "PortBay — lightweight local development environment manager"
authors = ["Tribal House"]
license = "AGPL-3.0-only"
edition = "2021"
default-run = "portbay-app"

[lib]
name = "portbay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Two bins: the Tauri GUI (loaded into PortBay.app) and the CLI shipped
# alongside. mainBinaryName in tauri.conf.json points at portbay-app.
[[bin]]
name = "portbay-app"
path = "src/main.rs"

[[bin]]
name = "portbay"
path = "src/bin/portbay.rs"

# Companion binaries (portbay-mcp, portbay-hosts-helper) are NOT bins of this
# package — they live in their own workspace crates under crates/ and ship as
# Tauri sidecars (see [workspace] below and scripts/build-*.sh). Keeping them
# out of this package means the Tauri bundler only auto-includes the GUI bin,
# and the rmcp/schemars stack is compiled only when crates/mcp is built.
[workspace]
members = ["crates/mcp", "crates/hosts-helper"]

[features]
# Enables `portbay_lib::mcp` + its protocol stack (rmcp). Off by default for
# GUI/CLI builds; turned on by the crates/mcp dependency on this package.
mcp = ["dep:rmcp"]
# Enables the proprietary per-project task board (`crate::context`,
# `commands::tasks`, the notification scanner, and the board surfaces in the
# CLI + MCP server). OFF in the public OSS build — the board source is injected
# from `portbay-cloud/desktop-pro` by the official release overlay, which builds
# with this feature on. Without it the app simply has no `/tasks` surface.
tasks = [
  "dep:ulid",
  # Repo map (context engine): tree-sitter def/ref tag extraction + PageRank
  # over the resulting graph, injected into every dispatch prompt. Grammar
  # crates compile C parsers, so they ride the tasks feature only — the public
  # OSS build links none of them.
  "dep:tree-sitter",
  "dep:streaming-iterator",
  "dep:tree-sitter-rust",
  "dep:tree-sitter-javascript",
  "dep:tree-sitter-typescript",
  "dep:tree-sitter-python",
  "dep:tree-sitter-go",
  "dep:tree-sitter-php",
  "dep:tree-sitter-ruby",
  "dep:tree-sitter-java",
]
# Visual Preview Editor (Pro) — embedded live-preview child webview. Off in
# the public OSS build; enabled by the official desktop-pro overlay build.
# Pulls in tauri's `unstable` feature for multiwebview (Window::add_child) and
# CG types for native WKWebView snapshots (block2 is already a hard dep of the
# dictation observers, so the feature only adds objc2-core-foundation).
visual-editor = [
  "tauri/unstable",
  "dep:objc2-core-foundation",
  # Browser edit mode: the local injection proxy serves/forwards real-browser
  # traffic with hyper (already in the tree transitively via reqwest).
  "dep:hyper",
  "dep:hyper-util",
  "dep:http-body-util",
  "dep:futures-util",
  # Pass-through responses stream (SSE / large downloads must not buffer).
  "reqwest/stream",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
# Auto-update: checks the GitHub-hosted latest.json, verifies the minisign
# signature against the pubkey in tauri.conf.json, downloads + installs.
# tauri-plugin-process backs the relaunch-after-install call.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Single-instance guard: a second launch hands its argv to the running instance
# (which focuses its window) and exits, so two app processes never each spawn a
# full sidecar stack. Desktop-only — registered first in the builder.
tauri-plugin-single-instance = "2"
# Native OS file-drag-out: lets the user physically drag PortBay's own .app
# bundle from the in-app permission sheet and drop it into the System Settings
# Accessibility list (the macOS gesture that grants the permission). A webview
# HTML5 drag can't hand a file to an external app — this plugin begins a real
# AppKit dragging session from the current mouse-down. Used by the accessibility
# permission sheet (public SetupRequirements + the task board's dictation flow).
tauri-plugin-drag = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "signal", "process", "sync"] }
async-trait = "0.1"
russh = { version = "0.61", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-sftp = "2.3"
# Heap-zeroize SSH secrets (passwords / passphrases / KBI replies) when their
# owning value drops, so they don't linger until reallocation (crash-dump /
# sysdiagnose exposure). Already in the tree transitively via the crypto stack.
zeroize = "1"
# Unpredictable SSH interaction flow IDs (host-key / KBI prompts). Already in
# the tree transitively.
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1"
dirs = "5"
tempfile = "3"
thiserror = "2"
url = "2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
which = "6"
# Android Wi-Fi pairing QR (mobile run UX). SVG-only — no image stack.
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
window-vibrancy = { version = "0.5", optional = false }
console = "0.16"
sysinfo = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x509-parser = "0.18"
libc = "0.2"
ed25519-dalek = "2"
base64 = "0.22"
# HMAC-SHA1 to match OpenSSH hashed (|1|salt|hash) known_hosts entries when
# resetting a host's trust. Both already in the tree transitively; pinned here.
hmac = "0.12"
sha1 = "0.10"
# Verify the signed managed-runtime manifest with the *same* minisign key as the
# app updater. Already in the tree transitively via tauri-plugin-updater; pinned
# here so the on-demand runtime download path is as trusted as an app update.
minisign-verify = "0.2"
# On-demand managed-runtime download + extract: verify SHA-256 (sha2/hex), then
# decompress the .tar.zst archive (zstd + tar) into place. tar/sha2/hex are
# already in the tree transitively; zstd is the chosen runtime-archive codec.
zstd = "0.13"
tar = "0.4"
sha2 = "0.11"
hex = "0.4"
aes-gcm = "0.10"
# Per-project task board ("Project Context & Task Authority"): stable, sortable
# card IDs (ULID). Optional — pulled in only by the `tasks` feature; the public
# OSS build links it not.
ulid = { version = "1", optional = true }
# Repo map (context engine, `tasks` only): tree-sitter parses source files and
# tags.scm queries extract definition/reference tags; streaming-iterator is the
# iteration protocol QueryMatches speaks since tree-sitter 0.24. One grammar
# crate per supported language — each bundles its generated C parser.
tree-sitter = { version = "0.25", optional = true }
streaming-iterator = { version = "0.1", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-php = { version = "0.24", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
# visual-editor only (browser edit mode): HTTP server + body plumbing for the
# injection proxy. All three are already in the tree transitively via reqwest;
# pinning them direct adds no new compilation units to the OSS build.
hyper = { version = "1", optional = true, features = ["server", "http1", "client"] }
hyper-util = { version = "0.1", optional = true, features = ["tokio", "server", "client-legacy", "http1"] }
http-body-util = { version = "0.1", optional = true }
# Stream adapter for the injection proxy's pass-through path. Already in the
# tree transitively via reqwest/hyper.
futures-util = { version = "0.3", optional = true, default-features = false, features = ["std"] }
# Filesystem-event watcher (FSEvents on macOS, inotify on Linux). Two consumers:
# the live log tail (`commands::log_stream`) wakes on file append so Follow mode
# surfaces lines as fast as a native `tail -f`, and the task board watches
# `<project>/.portbay/tasks/`. The log tail is in the default build, so this is
# a non-optional dependency.
notify = { version = "6" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "chrono", "json"] }

# Official Rust MCP SDK. Optional — gated behind the `mcp` feature and only
# compiled when the crates/mcp workspace member (which enables that feature)
# is built, never for the GUI/CLI. `schemars` is enabled so we can derive the
# JSON Schema agents read; rmcp re-exports it (`rmcp::schemars`) so the
# version always matches the SDK's expectation. stdio transport only —
# no HTTP/axum surface.
rmcp = { version = "1.7", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
], optional = true }

# Appearance-aware Dock icon (`crate::dock_icon`): swap NSApplication's
# applicationIconImage to a light/dark variant on theme change. These crates
# are already in the dependency tree transitively (via Tauri); pinned here so
# the AppKit call site is explicit. macOS-only.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
# PNG decode/resize for `crate::typing::icon_png_data_url` — bounds the
# dictation-overlay app-icon payload to a small fixed size (already in the tree
# transitively; png-only to stay lean).
image = { version = "0.25", default-features = false, features = ["png"] }
objc2 = "0.6"
# NSNotification/NSDistributedNotificationCenter/NSOperation/block2:
# `crate::dictation_session` observes DictationIM's distributed notifications
# (StartedListening / DidExitDictationMode) to mirror the global macOS
# dictation session state. NSUserDefaults + NSValue: read the system
# "Dictation Enabled" pref (com.apple.assistant.support) without spawning
# `defaults` on the mic-click hot path. NSDictionary + NSGeometry:
# `crate::typing` (PNG encode properties dict) and `crate::overlay_window`
# (NSRect/NSEdgeInsets for notch geometry).
objc2-foundation = { version = "0.3", features = [
  "NSData",
  "NSArray",
  "NSString",
  "NSProcessInfo",
  "NSNotification",
  "NSDistributedNotificationCenter",
  "NSOperation",
  "NSUserDefaults",
  "NSValue",
  "NSDictionary",
  "NSGeometry",
  "block2",
] }
# Closure→ObjC-block bridge for the notification observers above.
block2 = "0.6"
# NSResponder: NSApplication's `sendAction:to:from:` lives in its NSResponder
# category — system dictation is triggered by sending `startDictation:` down
# the responder chain (the Edit ▸ "Start Dictation…" code path).
# NSEvent + block2: push-to-talk watches the Fn (🌐) key via a local
# flagsChanged monitor — Fn never reaches the WKWebView as a DOM event;
# "dictate anywhere" adds a *global* monitor (other apps frontmost) on the
# same mask. NSScreen/NSWindow: the notch dictation overlay window
# (`crate::overlay_window`). NSPasteboard/NSWorkspace/NSRunningApplication/
# NSBitmapImageRep: system-wide transcript insertion + target-app capture
# (`crate::typing`).
objc2-app-kit = { version = "0.3", features = [
  "NSApplication",
  "NSResponder",
  "NSImage",
  "NSImageRep",
  "NSBitmapImageRep",
  "NSAppearance",
  "NSEvent",
  "NSScreen",
  "NSWindow",
  "NSPanel",
  "NSPasteboard",
  "NSWorkspace",
  "NSRunningApplication",
  "NSGraphics",
  "block2",
] }

# visual-editor only: CGRect/CGSize for native WKWebView snapshots (already
# compiles transitively via wry; block2 is a hard dep above).
objc2-core-foundation = { version = "0.3", optional = true, features = ["CFCGTypes"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[target.'cfg(not(any(target_os = "macos", target_os = "linux")))'.dependencies]
keyring = "3"

[dev-dependencies]
tempfile = "3"

# Release-build hygiene. `strip = "debuginfo"` drops DWARF line tables but keeps
# the symbol table, so the in-process panic backtraces our crash reporter
# captures (telemetry.rs) carry readable function names instead of bare
# addresses — the difference between a triageable crash report and noise. The
# symbol table is a fraction of the full debuginfo we used to strip, so most of
# the size win is retained. `lto` + a single codegen unit shrink and optimise
# across crates. opt-level is left at the default (3) so runtime speed — a
# product positioning point — isn't traded away for size.
# Applies workspace-wide (this is the workspace root); see scripts/build-*.sh
# for the sidecar crates.
[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
